src/app/core/products/products-dashboard/products-dashboard.component.scss
.container {
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: 11fr 1fr;
    grid-gap: 10px;
    width: 90vw;
    height: 90vh;
    margin: 0 auto;
    position: relative;
    top: 2vw;
}
.container > .sidebar {
    background-color: rgb(128, 128, 128, 0.3);
    border-radius: 10px;
    padding: 10px;
}
.container> .item-list {
    background-color: rgb(128, 128, 128, 0.3);
    border-radius: 10px;
    overflow-y: auto;
}
.search {
    margin: 10px;
    display: grid;
    grid-template-columns: 10fr 1fr;
    grid-gap: 5px;
}
.item {
    margin: 10px;
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-gap: 5px;
    cursor: pointer;
}
.item > img {
    height: 100%;
    width: 100%;
    min-width: 150px;
    border-radius: 10px;
}
.item-data {
    border-radius: 10px;
    background-color: rgba(90, 88, 88, 0.3);
    padding: 0 10px;
}
.item-data>p {
  margin: 10px;
}
.product-title {
  font-size: 1.2rem;
}
.loading {
  text-align: center;
}
.bottom-bar {
  grid-column: 1 / 3;
  border-radius: 10px;
  background-color: rgba(90, 88, 88, 0.4);
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
.bottom-bar > * {
  margin: 0 5px;
}
.bottom-bar > button {
  margin-bottom: 0;
}
@media only screen and (max-width: 600px) {
    .container {
      grid-template-columns: 1fr;
    }
  .container>.sidebar {
    display: none;
  }
  .item>img {
    height: 100%;
    width: 100%;
    min-width: 100px;
    min-height: 100px;
    border-radius: 10px;
  }
  .item-data {
      padding-top: 10px;
  }
  .item-data>p {
      margin: 5px;
  }
  .bottom-bar {
    grid-column: auto;
  }
  
}
::-webkit-scrollbar {
  width: 0px;
  background: transparent;
  /* make scrollbar transparent */
}

